#295699: Keep compatibility to Java 8